A bunch of small cleanup changes.